--- a/html/control-page-flash.html
+++ b/html/control-page-flash.html
@@ -28,6 +28,10 @@
 </head><body>
 <div style="text-align:center" class="padded"><a href="/stat" target="_blank">Stats</a>   |||   <a href="/recording" target="_blank">Recordings</a><br/>
 <p id="serverdetails">Test</p><script>var address = window.location.hostname; var rtmp = "Send primary stream to rtmp://"; fulladdress = rtmp.concat(address, "/input/stream1 or stream2 or stream 3 etc."); rtmp = "Send backup stream to rtmp://"; backupaddress = rtmp.concat(address, "/backup/stream1 or stream2 or stream 3 etc.");document.getElementById("serverdetails").innerHTML = fulladdress + "<br/>" + backupaddress;</script></div>
+
+<div style="text-align:center" class="padded"><p><form method="post" target="_blank" action="/streamconfig.php?remap"><b>No. of Audio Channels: </b><input type="text" name="channel_no" size="5" placeholder="4"/><input type="submit" value="Remap" /></form></p>
+<p><a href="/streamconfig.php?remapoff" target="_blank">Turn off Remapping</a></p></div>
+
 <h2 class="padded">Stream 1</h2>
 <div class="padleft" id="player" style="width:320px;height:180px"><img src="splash_black.jpg" height="180" width="320" /></div>
 <script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/input");
