Instagram Upto 4 streams

--- a/html/control-page-flash.html
+++ b/html/control-page-flash.html
@@ -76,6 +76,7 @@ $f("player2", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip
 <p>Out9: <a href="/2.php?1dest9on" target="_blank">On</a> ||| <a href="/2.php?1dest9off" target="_blank">Off</a></p>
 <p>Out10: <a href="/2.php?1dest10on" target="_blank">On</a> ||| <a href="/2.php?1dest10off" target="_blank">Off</a></p>
 <p>Record: <a href="/2.php?1dest11on" target="_blank">On</a> ||| <a href="/2.php?1dest11off" target="_blank">Off</a></p>
+<p><a href="/2.php?instagramon" target="_blank">Turn on Instagram</a>   |||   <a href="/2.php?instagramoff" target="_blank">Turn off Instagram</a>   ||| For Emergencies --> |||   <a href="/2.php?1dest99on" target="_blank">Turn on out99</a>   |||   <a href="/2.php?1dest99off" target="_blank">Turn off out99</a></p>
 
 <p><b>Lower Thirds:</b> <a href="/2.php?1superon" target="_blank">Add Lower Third</a>   |||   <a href="/2.php?1superoff" target="_blank">Remove Lower Third</a></p>
 
@@ -101,6 +102,7 @@ $f("player3", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip
 <p>Out9: <a href="/3.php?1dest9on" target="_blank">On</a> ||| <a href="/3.php?1dest9off" target="_blank">Off</a></p>
 <p>Out10: <a href="/3.php?1dest10on" target="_blank">On</a> ||| <a href="/3.php?1dest10off" target="_blank">Off</a></p>
 <p>Record: <a href="/3.php?1dest11on" target="_blank">On</a> ||| <a href="/3.php?1dest11off" target="_blank">Off</a></p>
+<p><a href="/3.php?instagramon" target="_blank">Turn on Instagram</a>   |||   <a href="/3.php?instagramoff" target="_blank">Turn off Instagram</a>   ||| For Emergencies --> |||   <a href="/3.php?1dest99on" target="_blank">Turn on out99</a>   |||   <a href="/3.php?1dest99off" target="_blank">Turn off out99</a></p>
 
 <p><b>Lower Thirds:</b> <a href="/3.php?1superon" target="_blank">Add Lower Third</a>   |||   <a href="/3.php?1superoff" target="_blank">Remove Lower Third</a></p>
 
@@ -126,6 +128,7 @@ $f("player4", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip
 <p>Out9: <a href="/4.php?1dest9on" target="_blank">On</a> ||| <a href="/4.php?1dest9off" target="_blank">Off</a></p>
 <p>Out10: <a href="/4.php?1dest10on" target="_blank">On</a> ||| <a href="/4.php?1dest10off" target="_blank">Off</a></p>
 <p>Record: <a href="/4.php?1dest11on" target="_blank">On</a> ||| <a href="/4.php?1dest11off" target="_blank">Off</a></p>
+<p><a href="/4.php?instagramon" target="_blank">Turn on Instagram</a>   |||   <a href="/4.php?instagramoff" target="_blank">Turn off Instagram</a>   ||| For Emergencies --> |||   <a href="/4.php?1dest99on" target="_blank">Turn on out99</a>   |||   <a href="/4.php?1dest99off" target="_blank">Turn off out99</a></p>
 
 <p><b>Lower Thirds:</b> <a href="/4.php?1superon" target="_blank">Add Lower Third</a>   |||   <a href="/4.php?1superoff" target="_blank">Remove Lower Third</a></p>
 
